[package]
name = "busan"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "An actor implementation for Rust"
homepage = "https://github.com/JohnMurray/busan"
repository = "https://github.com/JohnMurray/busan"
keywords = ["actor", "actors", "actor-system", "concurrent", "concurrency"]
authors = ["John Murray"]

autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
log = "0.4"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = "0.11"



## --------------------------------------------------------------------------------
## Examples

[[example]]
name = "hello_world"
path = "examples/hello_world/main.rs"

[[example]]
name = "ping_pong"
path = "examples/ping_pong/main.rs"
