[package]
name = "busan"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "An actor implementation for Rust"
homepage = "https://github.com/JohnMurray/busan"
repository = "https://github.com/JohnMurray/busan"
keywords = ["actor", "actors", "actor-system", "concurrent", "concurrency"]
authors = ["John Murray"]

autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "busan-derive",

    "examples/hello_world",
    "examples/ping_pong",
]

[dependencies]
crossbeam-channel = "0.5"
log = "0.4"
num_cpus = "1.13"
prost = "0.11"
prost-types = "0.11"
busan-derive = { path = "busan-derive", version = "0.1" }

[build-dependencies]
prost-build = "0.11"
