# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "busan"
version = "0.2.1"
authors = ["John Murray"]

edition = "2021"
exclude = [".devcontainer", ".github", "decisions", ".gitignore"]
autoexamples = false

readme = "README.md"
description = "An actor implementation for Rust"
homepage = "https://github.com/JohnMurray/busan"
repository = "https://github.com/JohnMurray/busan"
keywords = ["actor", "actor-system", "concurrent", "concurrency", "actor-model"]
categories = ["asynchronous", "concurrency"]
license = "GPL-3.0"

[workspace]
members = [
    "busan-derive",

    "examples/hello_world",
    "examples/ping_pong",
]

[dependencies]
crossbeam-channel = "0.5"
log = "0.4"
num_cpus = "1.13"
prost = "0.11"
prost-types = "0.11"
busan-derive = { path = "busan-derive", version = "0.1" }

[build-dependencies]
prost-build = "0.11"
