[package]
name = "busan-derive"
version = "0.1.0"
edition = "2021"
authors = ["John Murray"]
license-file = "../LICENSE"
readme = "README.md"
homepage = "https://github.com/JohnMurray/busan"
repository = "https://github.com/JohnMurray/busan"
description = "Utility library for generating Message traits for use with the busan crate"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"